--- a/estilo_contado.css
+++ b/estilo_contado.css
@@ -30,7 +30,6 @@ color: white;
 }
 
 nav {
-border: 3px solid #4CAF50;
 width: 100%;
 height: 50px;
 background-color: #4CAF50;
@@ -39,7 +38,6 @@ font-family: 'Arial';
 
 ul {
   list-style: none;
-  position: relative;
 }
 
 li {
@@ -55,7 +53,7 @@ li:nth-child(2){ /* seletor */
 }
 
 a {
-padding: 15px;
+padding: 12.5px;
 display: block;
 text-decoration: none;
 text-align: center;
@@ -68,8 +66,13 @@ background-color: #f4f4f4;
 color: #555;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 1000px){
   form {
+    margin-top: 55px;
     width: 90%;
+  }
+
+  ul li {
+    width: 100%;
   }
 }
